Bug 311837 - Cannot add routes or additional addresses for VPN connection
Summary: Cannot add routes or additional addresses for VPN connection
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: VPNC (other bugs)
Version First Reported In: 0.9
Platform: Fedora RPMs Linux
: NOR grave
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-17 16:57 UTC by John Griffiths
Modified: 2013-01-23 01:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Griffiths 2012-12-17 16:57:57 UTC
Cannot add routes or additional addresses under IP4 tab for a VPN. I am trying to connect to a Cisco router.

Version-Release number of selected component (if applicable):
0.9.0.5-1.fc17.i686


Reproducible: Always

Steps to Reproduce:
1. open KDE Network Connections
2. Create or select a CISCO VPN connection
3. Try to add a route or an address under the IP4 tab

Actual Results:  
Route or address is not added

Expected Results:  
Route or address should be added

When trying to add a route the metric cannot be entered.
When trying to add an address the gateway cannot be entered.

The connection is usable in basic configuration, but if additional routes or addresses are needed, then the software is unusable. For me, that makes it unusable.
Comment 1 Lamarque V. Souza 2012-12-17 17:07:44 UTC
All four fields (Address, Netmask, Gateway and Metric) have to be set before you hit the "Ok" button. If you miss *any* of those four information then NetworkManager will refuse to add the route. It is common the user to not fill the "Metric" field and that causes the route to be refused.
Comment 2 John Griffiths 2012-12-17 17:27:57 UTC
I tried to add the metric field but when adding a route and also tried adding a gateway when adding an address. Those fields do not accept any values. I type, nothing is entered. I put that information in the original bug report.
Comment 3 Lamarque V. Souza 2012-12-17 17:46:13 UTC
Here it works, I can type any valid numerical value into any of those fields.
Comment 4 John Griffiths 2012-12-17 18:03:10 UTC
Don't know what to say. It does not work here. I can type values into IP, netmask, and gateway, but nothing will type in the  metric field.
Comment 5 Lamarque V. Souza 2013-01-02 22:37:00 UTC
Well, I still cannot reproduce this problem here. Can you send me a video showing the problem?
Comment 6 John Griffiths 2013-01-09 16:18:55 UTC
I tried to upload the video, but it is too large; 282.7 MB

I have put it here: http://www.grifent.com/pics/movies/20130109_103811.mp4

Please let me know when you have seen it, so I can remove it.
Comment 7 Lamarque V. Souza 2013-01-23 01:26:27 UTC
Git commit 59c8e36008700e3fa8ebbee222f6c6232eed08e1 by Lamarque V. Souza.
Committed on 23/01/2013 at 02:21.
Pushed by lvsouza into branch 'master'.

Initialize variable here to fix Metric edit box in VPN's routes window.
FIXED-IN: 0.9.0.7

M  +1    -1    libs/ui/intvalidator.cpp
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/59c8e36008700e3fa8ebbee222f6c6232eed08e1
Comment 8 Lamarque V. Souza 2013-01-23 01:27:39 UTC
Git commit 9d5ed31547383ca8d218d7cebe58824ebcf06213 by Lamarque V. Souza.
Committed on 23/01/2013 at 02:21.
Pushed by lvsouza into branch 'nm09'.

Initialize variable here to fix Metric edit box in VPN's routes window.
FIXED-IN: 0.9.0.7

M  +1    -1    libs/ui/intvalidator.cpp
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/9d5ed31547383ca8d218d7cebe58824ebcf06213