Initialize variable here to fix Metric edit box in VPN's routes window.

BUG: 311837
FIXED-IN: 0.9.0.7